# project-activities

./: .exrc  .gitignore  README.md
cpp1/: abc.cpp  hello.cpp  hello_err.cpp  square_equation.cpp
lw1/: abc.cpp  hello.cpp  hello_err.cpp  square_equation.cpp
sfml.1/: CMakeLists.txt
sfml.1/00/: CMakeLists.txt
sfml.1/01/: main.cpp
sfml.1/sfml1.1/: main.cpp
sfml1/: .exrc  CMakeLists.txt
sfml1/00/: main.cpp
sfml1/01/: main.cpp
sfml1/02/: main.cpp
sfml1/03/: CMakeLists.txt  main.cpp
sfml1/sfml1.1/: CMakeLists.txt  main.cpp
sfml1/sfml1.2/: CMakeLists.txt  main.cpp
sfml1/sfml1.3/: main.cpp
sfml2/: CMakeLists.txt
sfml2/00/: CMakeLists.txt  main.cpp
sfml2/01/: CMakeLists.txt  main.cpp
sfml2/02/: CMakeLists.txt
sfml2/03/: CMakeLists.txt  main.cpp
sfml2/sfml2.1/: main.cpp
sfml2/sfml2.2/: main.cpp
sfml3/: CMakeLists.txt
sfml3/00/: main.cpp
sfml3/01/: CMakeLists.txt
sfml3/02/: CMakeLists.txt  main.cpp
sfml3/03/: CMakeLists.txt  main.cpp
sfml3/04/: CMakeLists.txt  main.cpp
sfml3/sfml3.1/: CMakeLists.txt  main.cpp
sfml3/sfml3.2/: CMakeLists.txt  main.cpp
sfml3/sfml3.3/: CMakeLists.txt  main.cpp
workshop1/: CMakeLists.txt
workshop1/workshop1.1/: CMakeLists.txt  main.cpp
workshop1/workshop1.2/: CMakeLists.txt  main.cpp
workshop1/workshop1.2/include/: utils.h
workshop1/workshop1.2/src/: main.cpp  utils.cpp
workshop1/workshop1.3/: CMakeLists.txt  main.cpp
workshop1/workshop1.4/: CMakeLists.txt
workshop1/workshop1.4/include/: utils.h
workshop1/workshop1.4/src/: main.cpp  utils.cpp
